# skipgraph-rust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: claude.yml  rust.yml
src/: lib.rs
src/core/: mod.rs  node.rs
src/core/context/: context_test.rs  examples.rs  mod.rs
src/core/lookup/: array_lookup_table.rs  array_lookup_table_test.rs  lookup_table.rs  mod.rs
src/core/model/: address.rs  direction.rs  identifier.rs  identity.rs  memvec.rs  mod.rs  search.rs
src/core/search/: id_search_req.rs  id_search_res.rs  identifier_searcher.rs  mod.rs
src/core/testutil/: fixtures.rs  mod.rs  random.rs
src/local/: base_node.rs  local_skip_graph.rs  mod.rs  node.rs  search_by_id_test.rs  search_fallback_test.rs  skip_graph_integration_test.rs
src/network/: mod.rs  processor.rs
src/network/mock/: hub.rs  mod.rs  network.rs  network_test.rs  noop_network.rs
src/node/: base_node.rs  core.rs  core_test.rs  mod.rs  search_by_id_test.rs  skip_graph_integration_test.rs
tests/: test_debug_hex_format.rs
