[package]
name = "skipgraph"
version = "0.1.0"
edition = "2021"
rust-version = "1.89.0"

[dependencies]
hex = "0.4.3"
anyhow = "1.0.86"
rand = "0.9.0-alpha.2"
fixedstr = "0.5.8"
bs58 = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
tracing-log = "0.1"
unimock = "0.6"
parking_lot = "0.12"